--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
 
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
+<!-- alternativa usare cdn https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js -->
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
