--- a/heroes.html
+++ b/heroes.html
@@ -34,7 +34,24 @@
           </nav>
     </header>
 
-    <!-- qui metteremo le cards -->
+    <aside class="alert alert-info p-4 text-center">
+      <h2>Our heroes</h2>
+    </aside>
+    <!-- qui iniziano le cards -->
+    <section class="container">
+      <div class="row">
+
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
 
 
 
