--- a/heroes.html
+++ b/heroes.html
@@ -44,6 +44,19 @@
         <div class="col-lg-3">
           <div class="card">
             <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Andrea Guffi</h5>
+              <p class="card-text">Web 1 - Mohole</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <a href="https://github.com/andreuhh">
+              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
+              </a>
+              <a href="https://github.com/andreuhh?tab=repositories">
+                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+                </a>
+
+            </ul>
           </div>
 
         </div>
