--- a/login.html
+++ b/login.html
@@ -38,92 +38,9 @@
           </nav>
     </header>
 
-    <aside class="alert alert-info p-4 text-center">
-      <h2>Our heroes</h2>
-    </aside>
-    <!-- qui iniziano le cards -->
-    <section class="container">
-      <div class="row">
+  <main class="container">
 
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
-                </a>
-
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
-                </a>
-
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
-                </a>
-
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
-                </a>
-
-            </ul>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
+  </main>
 
 
 
