--- a/login.html
+++ b/login.html
@@ -39,6 +39,24 @@
     </header>
 
   <main class="container">
+         <!-- FORM BOOTSTRAP -->
+    <div class="bs-example">
+        <form action="/examples/actions/confirmation.php" class="needs-validation" method="post" novalidate>
+            <div class="form-group">
+                <label for="inputEmail">Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
+                <div class="invalid-feedback">Inserisci un indirizzo email valido.</div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword">Password</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+                <div class="invalid-feedback">Please enter your password to continue.</div>
+            </div>
+            <div class="form-group">
+                <label class="form-check-label"><input type="checkbox"> Ricordami</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Entra</button>
+        </form>
 
   </main>
 
