--- a/login.html
+++ b/login.html
@@ -58,10 +58,46 @@
             <button type="submit" class="btn btn-primary">Entra</button>
         </form>
 
+         <!-- FORM ROW -->
+         <form>
+            <h3>FORM ROW</h3>
+            <div class="form-row">
+              <div class="col-9">
+                <input type="text" class="form-control" placeholder="Città">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Zip">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Nazione">
+              </div>
+            </div>
+          </form>
+
   </main>
 
 
-
+   <!-- JavaScript for disabling form submissions if there are invalid fields -->
+   <script>
+    // Self-executing function
+    (function() {
+        'use strict';
+        window.addEventListener('load', function() {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        }, false);
+    })();
+</script>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!-- alternativa usare cdn https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js -->
