--- a/login.html
+++ b/login.html
@@ -62,11 +62,11 @@
          <form>
             <h3>FORM ROW</h3>
             <div class="form-row">
-              <div class="col-9">
+              <div class="col-8">
                 <input type="text" class="form-control" placeholder="Città">
               </div>
               <div class="col">
-                <input type="text" class="form-control" placeholder="Zip">
+                <input type="text" class="form-control" placeholder="CAP">
               </div>
               <div class="col">
                 <input type="text" class="form-control" placeholder="Nazione">
