--- a/login.html
+++ b/login.html
@@ -39,7 +39,13 @@
     </header>
 
   <main class="container">
-         <!-- FORM BOOTSTRAP -->
+         <!--
+             FORM BOOTSTRAP
+             Validazione:
+             Prova a cliccare sul bottone con campi vuoti
+             o con email senza @ 
+        
+        -->
     <div class="bs-example">
         <form action="/examples/actions/confirmation.php" class="needs-validation" method="post" novalidate>
             <div class="form-group">
@@ -50,7 +56,7 @@
             <div class="form-group">
                 <label for="inputPassword">Password</label>
                 <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
-                <div class="invalid-feedback">Please enter your password to continue.</div>
+                <div class="invalid-feedback">Inserisci la tua password per continuare.</div>
             </div>
             <div class="form-group">
                 <label class="form-check-label"><input type="checkbox"> Ricordami</label>
