--- a/login.html
+++ b/login.html
@@ -83,7 +83,8 @@
   </main>
 
 
-   <!-- JavaScript for disabling form submissions if there are invalid fields -->
+   <!-- JavaScript for disabling form submissions if there are invalid fields
+Validazione form via JavaScript -->
    <script>
     // Self-executing function
     (function() {
