--- a/heroes.html
+++ b/heroes.html
@@ -83,24 +83,24 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
-                </a>
+        <!-- Andrea Lepori -->
 
-            </ul>
+        <div class="card col-lg-3 col-md-4 col-sm-6 mb-4">
+          <img src="https://avatars1.githubusercontent.com/u/57524583?s=400&u=cea0286eb2456808cb17d2141c889ceb2513537c&v=4" alt="">
+          <div class="card-body">
+          <h5 class="card-title">Andrea Lepori</h5>
+          <p class="card-text">Web 1 - Mohole</p>
           </div>
-        </div>
+          <ul class="list-group list-group-flush">
+          <a href="https://github.com/andrealepori">
+          <li class="list-group-item"><span class="fab fa-github"></span> andrealepori</li>
+          </a>
+          <a href="https://github.com/andrealepori?tab=repositories">
+          <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+          </a>
+          
+          </ul>
+          </div>
 
         
 
