--- a/index-dev-npm.html
+++ b/index-dev-npm.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BootstrHUB</title>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <!-- <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css"> -->
     <link rel="stylesheet" href="my-root.css">
     <link rel="stylesheet" href="style-base.css">
@@ -84,12 +81,10 @@
     </section>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
+
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
 <!-- alternativa usare cdn https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/cjs/popper-base.min.js"></script>
-<!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
-<!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
