--- a/heroes.html
+++ b/heroes.html
@@ -107,24 +107,23 @@
 
         
 
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card">
-            <img src="https://avatars3.githubusercontent.com/u/57524903?s=400&v=4" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Andrea Guffi</h5>
-              <p class="card-text">Web 1 - Mohole</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <a href="https://github.com/andreuhh">
-              <li class="list-group-item"><span class="fab fa-github"></span> andreuhh</li>
-              </a>
-              <a href="https://github.com/andreuhh?tab=repositories">
-                <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+          <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card">
+              <img src="img/io.jpg" alt="">
+              <div class="card-body">
+                <h5 clas="card-title">Sara Valeria Fossati</h5>
+                <p class="card-text">Web 1 - Mohole</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <a href="https://github.com/Sarafossati">
+                  <li class="list-group-item"><span class="fab fa-github"></span> Sarafossati</li>
                 </a>
-
-            </ul>
+                <a href="https://github.com/Sarafossati?tab=repositories">
+                  <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+                </a>
+              </ul>
+            </div>
           </div>
-        </div>
 
       </div>
 
