--- a/heroes.html
+++ b/heroes.html
@@ -109,7 +109,7 @@
 
           <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
             <div class="card">
-              <img src="img/io.jpg" alt="">
+              <img src="https://avatars1.githubusercontent.com/u/57524654?s=400&u=58810b0a591452aca0670f9d0023b80cb9e2a496&v=4" alt="">
               <div class="card-body">
                 <h5 clas="card-title">Sara Valeria Fossati</h5>
                 <p class="card-text">Web 1 - Mohole</p>
