--- a/heroes.html
+++ b/heroes.html
@@ -130,14 +130,12 @@
     </section>
 
 
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
     <!-- alternativa usare cdn https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/cjs/popper-base.min.js"></script>
+    
     <!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
     <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
