--- a/heroes.html
+++ b/heroes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BootstrHUB</title>
+    <title>Mohole CodeFighters</title>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <!-- <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"> -->
@@ -42,7 +42,7 @@
     </header>
 
     <aside class="alert alert-info p-4 text-center">
-      <h2>Our heroes</h2>
+      <h2>MOHOLE CODEFIGHTERS 2019-2020</h2>
     </aside>
     <!-- qui iniziano le cards -->
     <section class="container">
@@ -88,7 +88,8 @@
 
         <!-- Andrea Lepori -->
 
-        <div class="card col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+          <div class="card">
           <img src="https://avatars1.githubusercontent.com/u/57524583?s=400&u=cea0286eb2456808cb17d2141c889ceb2513537c&v=4" alt="">
           <div class="card-body">
           <h5 class="card-title">Andrea Lepori</h5>
@@ -103,6 +104,7 @@
           </a>
           
           </ul>
+        </div>
           </div>
 
         
@@ -128,6 +130,7 @@
       </div>
 
     </section>
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
