--- a/heroes.html
+++ b/heroes.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="index.html">Github Heroes</a>
+            <a class="navbar-brand" href="index.html">Github CodeFighters</a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
     </header>
 
     <aside class="alert alert-info p-4 text-center">
-      <h2>MOHOLE CODEFIGHTERS 2019-2020</h2>
+      <h2>CODEFIGHTERS</h2>
     </aside>
     <!-- qui iniziano le cards -->
     <section class="container">
