--- a/heroes.html
+++ b/heroes.html
@@ -174,6 +174,49 @@
             </div>
           </div>
 
+          <!-- Giuseppe Conti -->
+          <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="card">
+              <img src="https://avatars2.githubusercontent.com/u/46853326?s=460&u=d1edc230b338c5fb98a540ddb0077407cdfef7fd&v=4"
+                alt="">
+              <div class="card-body">
+                <h5 class="card-title">Giuseppe Conti</h5>
+                <p class="card-text">Web 1 - Mohole</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <a href="https://github.com/peppeconti">
+                  <li class="list-group-item"><span class="fab fa-github"></span> peppeconti</li>
+                </a>
+                <a href="https://github.com/peppeconti?tab=repositories">
+                  <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+                </a>
+          
+              </ul>
+            </div>
+          </div>
+
+          <!-- Linda -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars2.githubusercontent.com/u/57524681?s=400&u=6cb7eee6d8df40967d270bd4a52c77650c8bedac&v=4"
+            alt="">
+          <div class="card-body">
+            <h5 class="card-title">Linda Mazzola</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/lindaaaMazzola">
+              <li class="list-group-item"><span class="fab fa-github"></span> Linda Mazzola</li>
+            </a>
+            <a href="https://github.com/lindaaaMazzola?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+ 
+          </ul>
+        </div>
+      </div>
+
+
       <!-- Andrea Guffi -->
       <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="card">
