--- a/heroes.html
+++ b/heroes.html
@@ -279,6 +279,7 @@
 
   <!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
   <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+  <!-- bundle.min.js comprende anche popper.js -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
