--- a/heroes.html
+++ b/heroes.html
@@ -257,6 +257,139 @@
           </ul>
         </div>
       </div>
+<!-- Luca Aggio -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars2.githubusercontent.com/u/57524908?s=460&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Luca Aggio</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/lucaaggio">
+              <li class="list-group-item"><span class="fab fa-github"></span> lucaaggio</li>
+            </a>
+            <a href="https://github.com/lucaaggio?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Omar -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars3.githubusercontent.com/u/57524638?s=460&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Omar Colombo</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/Ramoscello">
+              <li class="list-group-item"><span class="fab fa-github"></span> Ramoscello</li>
+            </a>
+            <a href="https://github.com/Ramoscello?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Aurora -->
+
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars0.githubusercontent.com/u/57524709?s=460&u=27247cc67b4aed07985adf8019b6a21bc82c2c04&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Aurora Carrà</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/aury61100">
+              <li class="list-group-item"><span class="fab fa-github"></span> aury61100</li>
+            </a>
+            <a href="https://github.com/aury61100?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Blanche -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars0.githubusercontent.com/u/56803300?s=460&u=c3f918fe1e4b5c80303067e6268b80ed7cf7d281&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Blanche Rodriguez Calderara</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/blancherodriguezcalderara">
+              <li class="list-group-item"><span class="fab fa-github"></span> blancherodriguezcalderara</li>
+            </a>
+            <a href="https://github.com/blancherodriguezcalderara?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Alessandro -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars2.githubusercontent.com/u/57524717?s=460&u=39ca4e76ab4284dcb6cc3d9c749526278f070835&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Alessandro Cappello</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/cappelloalessandro">
+              <li class="list-group-item"><span class="fab fa-github"></span> cappelloalessandro</li>
+            </a>
+            <a href="https://github.com/cappelloalessandro?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Noemi -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars0.githubusercontent.com/u/57524855?s=460&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Noemi Stramandinoli</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/Stralollipoppi">
+              <li class="list-group-item"><span class="fab fa-github"></span> Stralollipoppi</li>
+            </a>
+            <a href="https://github.com/Stralollipoppi?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
+
+      <!-- giorgio -->
+      <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+        <div class="card">
+          <img src="https://avatars0.githubusercontent.com/u/57524487?s=460&v=4" alt="">
+          <div class="card-body">
+            <h5 clas="card-title">Giorgio Colombo</h5>
+            <p class="card-text">Web 1 - Mohole</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <a href="https://github.com/giorgiocolombo">
+              <li class="list-group-item"><span class="fab fa-github"></span> giorgiocolombo</li>
+            </a>
+            <a href="https://github.com/giorgiocolombo?tab=repositories">
+              <li class="list-group-item"><span class="fab fa-github"></span> Repositories</li>
+            </a>
+          </ul>
+        </div>
+      </div>
 
 
   
