--- a/codefighters/index.html
+++ b/codefighters/index.html
@@ -36,7 +36,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link"
-              href="index.html">Home <span class="sr-only">(current)</span></a>
+              href="index.html">Home MoholePeople.it <span class="sr-only">(current)</span></a>
           </li>
 
         </ul>
@@ -46,6 +46,7 @@
 
   <aside class="alert alert-info p-4 text-center">
     <h2>CODEFIGHTERS</h2>
+    <h4>Mohole Web Coders 2020</h4>
   </aside>
   <!-- qui iniziano le cards -->
   <section class="container">
